--- a/mobile_service_center/index.html
+++ b/mobile_service_center/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-</head>
+<!-- Bootstrap -->
 <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' crossorigin='anonymous'>
 <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz' crossorigin='anonymous'></script>
+<!-- Css Connect -->
+<link rel="stylesheet" href="style.css" type="text/css">    
+</head>
+
 <body>
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light ">
@@ -20,18 +24,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div  class="collapse navbar-collapse me-5 justify-content-center  " id="colmenu">
-                
-                 <ul class="navbar-nav me-5 ">
-                    <li class="nav-item fw-bold"><a class="nav-link" href="">Home</a></li>
-                    <li class="nav-item fw-bold"><a class="nav-link" href="">Services</a></li>
-                    <li class="nav-item fw-bold"><a class="nav-link" href="">About Us</a></li>
+            <div  class="collapse navbar-collapse me-5 justify-content-center" id="colmenu">
+                 <ul class="navbar-nav">
+                    <li class="nav-item fw-bold"><a style="text-decoration: none; " class="nav-link fs-5" href="">Home</a></li>
+                    <li class="nav-item fw-bold"><a style="text-decoration: none; " class="nav-link fs-5" href="">Services</a></li>
+                    <li class="nav-item fw-bold"><a style="text-decoration: none; " class="nav-link fs-5" href="">About Us</a></li>
                  </ul>    
             </div>
         </div>
     </nav>
 
-
+    
 
 </body>
 </html>
