--- a/digitalmarket/index.html
+++ b/digitalmarket/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 </head>
-
-<body>
+<!-- bootstrap -->
+ <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+ <script src="bootstrap/js/bootstrap.min.js"></script>
+<!-- Css -->
+ <link rel="stylesheet" href="style.css">
+ <body>
+      <main class="container-fluid" style="background-color: rgb(167, 143, 143);">
     
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <a href="" class="navbar-brand">
+                
+            </a>
+        </nav>  
+      </main>
 </body>
 </html>
