--- a/digitalmarket/index.html
+++ b/digitalmarket/index.html
@@ -10,15 +10,16 @@
  <script src="bootstrap/js/bootstrap.min.js"></script>
 <!-- Css -->
  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="animatestyle.css">
  <body>
     <main class="container-fluid" >
 
       <!-- //// NAVIGATION BAR /// -->
        
-        <nav class="navbar navbar-expand-sm ">
+        <nav class="navbar navbar-expand-sm  ">
           <!-- Logo -->
           <a href="" class="navbar-brand ms-2">
-            <img id="cmplogo" src="image/demoimage/cmpdemo.jpg" alt="Company Image">
+            <img id="cmplogo" src="image/demoimage/cmpdemo.jpg" alt="Company Image" title="">
           </a>
           <!-- Company Name -->
           <a class="navbar-brand" href="#">YDMI</a>
@@ -30,16 +31,16 @@
     
           <!-- Collapse Element -->
           <div class="collapse navbar-collapse" id="colsiblenav">
-            <ul class="navbar-nav  ms-sm-1  w-100 justify-content-center">
+            <ul class="navbar-nav  ms-sm-1  w-100 justify-content-center scale-up-center">
               <li class="nav-item ms-sm-1 " id="stylenavitems"><a class="nav-link  rounded-pill px-4 my-2" id="configitems" href="">Home</a></li>
               <li class="nav-item ms-sm-2" id="stylenavitems"><a class="nav-link rounded-pill px-4 my-2" id="configitems" href="">Course list</a></li>
               <li class="nav-item ms-sm-1" id="stylenavitems"><a class="nav-link rounded-pill px-4 my-2" id="configitems" href="">Services</a></li>
               <li class="nav-item ms-sm-1" id="stylenavitems"><a class="nav-link rounded-pill px-4 my-2" id="configitems" href="">Contact</a></li>
             </ul>
-            <ul class="navbar-nav me-2 mt-1 border  border-primary  rounded-pill mb-1" >
+            <ul class="navbar-nav me-2 mt-1 border  border-primary border-2 rounded-pill mb-1 scale-up-center" >
               <li class="nav-item" id="stylesignupbtn"><a class="nav-link border-primary rounded-pill px-4" id="signupconfig" href="">SignUp</a></li>
             </ul>
-            <ul class="navbar-nav bg-primary me-2 border border-primary rounded-pill" id="login">
+            <ul class="navbar-nav bg-primary me-2 border border-primary rounded-pill scale-up-center" id="login">
                 <li class="nav-item" id="stylelogin" ><a class="nav-link px-4" id="configlogintext" href="">Login</a></li>
             </ul>
           </div>
