--- a/digitalmarket/index.html
+++ b/digitalmarket/index.html
@@ -82,8 +82,14 @@
                     </div>
                     <span><span>Elevate </span>Your Business.</span>
                    </div>
+                 
+                  <!-- Book Marked  -->
                    <div class="col-6 border border-danger">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit optio, necessitatibus fuga earum iusto veritatis sint sit quibusdam voluptates voluptatum voluptatem assumenda debitis! Iusto nihil nisi ipsam non obcaecati adipisci.
+                        <div class="ms-5">
+                            <span class="ms-5">Develop our products with our digital </span><br>  
+                            <span class="ms-4">&nbsp;&nbsp;&nbsp;marketing services that are trusted and</span> <br>
+                            <span class="ms-3">very experienced in their fields, let's try it</span>
+                      </div>
                    </div>
              </div>
       </header>
