--- a/digitalmarket/index.html
+++ b/digitalmarket/index.html
@@ -118,10 +118,10 @@
        <div  class=" container-fluid mt-5 ">
          <div class="row g-3">
              <div class="col-sm-8" >
-                 <img class="img-fluid rounded-5 h-75  slide-in-blurred-left " width="100%"  src="/digitalmarket/image/laptop.jpg" alt="">
+                 <img class="img-fluid rounded-5 h-75  slide-in-blurred-left " width="100%"  src="../digitalmarket/image/laptop.jpg" alt="">
              </div>
              <div class="col-sm-4">
-                  <img class="img-fluid h-75 w-100  rounded-5 slide-in-blurred-right"  src="/digitalmarket/image/conver.jpg" alt="">
+                  <img class="img-fluid h-75 w-100  rounded-5 slide-in-blurred-right"  src="../digitalmarket/image/conver.jpg" alt="">
              </div>
          </div>
        </div>
