--- a/digitalmarket/index.html
+++ b/digitalmarket/index.html
@@ -25,7 +25,7 @@
             <img id="cmplogo" src="image/demoimage/cmpdemo.jpg" alt="Company Image" title="">
           </a>
           <!-- COMPANY NAME -->
-          <a class="navbar-brand" href="#">YDMI</a>
+          <a class="navbar-brand" href="#">DIGITAL MARKETING</a>
     
           <!-- COLLAPSE BUTTON -->
           <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#colsiblenav">
