--- a/doorenterprise/index.html
+++ b/doorenterprise/index.html
@@ -90,7 +90,7 @@
   </div><br><br><br><br><br><br><br><br>
 
   <!-- RELATED WORK -->
-  <div class="container ms-5 slide-top" id="configrelated">
+  <div class="container ms-1 slide-top" id="configrelated">
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 col-lg-6">
         <div class="related-works d-flex align-items-center">
@@ -105,24 +105,24 @@
   </div><br><br>
 
   <!-- SLIDER MENU -->
-  <div class="container mt-5">
+  <div class="container" >
     <div class="d-flex align-items-center">
       <!-- Left Arrow -->
-      <div class="arrow-btn me-2" onclick="scrollMenu(-300)">&#9664;</div>
+      <div class="arrow-btn me-2" onclick="scrollMenu(-300)"><img class="img-fluid" src="../doorenterprise/image/previous.png" width="70"  alt=""></div>
 
       <!-- Image Menu -->
-      <div class="image-menu flex-grow-1 d-flex gap-2">
-        <img src="../doorenterprise/data/murals.jpg" class="rounded-1"  alt="Image 1">
-        <img src="../doorenterprise/data/wallpainting.jpg"  alt="Image 2">
-        <img src="../doorenterprise/data/woodfloor.jpg"  alt="Image 3">
-        <img src="../doorenterprise/data/wardrobe.jpg"  alt="Image 4">
-        <img src="https://via.placeholder.com/200x150" alt="Image 5">
-        <img src="https://via.placeholder.com/200x150" alt="Image 6">
-        <img src="https://via.placeholder.com/200x150" alt="Image 7">
+      <div class="image-menu flex-grow-1 d-flex gap-2 p-3  rounded-2">
+        <img class="rounded-2 img-fluid slideshadow" src="../doorenterprise/data/murals.jpg" alt="Image 1">
+        <img class="rounded-2 img-fluid slideshadow" src="../doorenterprise/data/wallpainting.jpg"  alt="Image 2">
+        <img class="rounded-2 img-fluid slideshadow" src="../doorenterprise/data/woodfloor.jpg"  alt="Image 3">
+        <img class="rounded-2 img-fluid slideshadow" src="../doorenterprise/data/wardrobe.jpg"  alt="Image 4">
+        <img class="rounded-2 img-fluid slideshadow" src="../doorenterprise/data/masterbed.jpg" alt="Image 5">
+        <img class="rounded-2 img-fluid slideshadow" src="../doorenterprise/data/electric.jpg" alt="Image 6">
+        <img class="rounded-2 img-fluid slideshadow" src="../doorenterprise/data/false.jpg" alt="Image 7">
       </div>
 
       <!-- Right Arrow -->
-      <div class="arrow-btn ms-2" onclick="scrollMenu(300)"><img src="../experiment/arrow.png" class="img-fluid" width="30"  alt=""></div>
+      <div class="arrow-btn ms-2" onclick="scrollMenu(300)"><img src="../doorenterprise/image/next.png" class="img-fluid" width="70"  alt=""></div>
     </div>
   </div><br><br>
   
