--- a/doorenterprise/demo1.html
+++ b/doorenterprise/demo1.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Related Works</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .related-works {
-      background: url('https://via.placeholder.com/300x200') repeat; /* Replace with your pattern background */
-      padding: 20px;
-      text-align: left;
-      position: relative;
-    }
-    .related-works h1 {
-      color: #a56b2a; /* Brown color for "Works" */
-      font-size: 2rem;
-      font-weight: bold;
-      margin: 0;
-    }
-    .related-works h2 {
-      color: black; /* Black color for "Related" */
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin: 0 0 10px 0;
-    }
-    .vertical-line {
-      width: 5px;
-      height: 50px;
-      background-color: #a56b2a;
-      margin-right: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Hover Text Overlay</title>
+    <style>
+        .image-container {
+            position: relative;
+            display: inline-block;
+            width: 300px;
+        }
+
+        .image-container img {
+            width: 100%;
+            display: block;
+            border-radius: 10px;
+        }
+
+        .overlay-text {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            font-weight: bold;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+            border-radius: 10px;
+        }
+
+        .image-container:hover .overlay-text {
+            opacity: 1;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-8 col-lg-6">
-        <div class="related-works d-flex align-items-center">
-          <div class="vertical-line"></div>
-          <div>
-            <h2>Related</h2>
-            <h1>Works</h1>
-          </div>
-        </div>
-      </div>
+
+    <div class="image-container">
+        <img src="../doorenterprise/data/masterbed.jpg" alt="Image">
+        <div class="overlay-text">Hovered Text</div>
     </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
